--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title>R and databases</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2023-06-05" />
-    <script src="visualizacion-1_files/header-attrs-2.21/header-attrs.js"></script>
+    <meta name="date" content="2023-06-13" />
+    <script src="datos-1-3_files/header-attrs-2.22/header-attrs.js"></script>
+    <link href="datos-1-3_files/panelset-0.2.6/panelset.css" rel="stylesheet" />
+    <script src="datos-1-3_files/panelset-0.2.6/panelset.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -28,19 +30,526 @@ class: center, middle
 
 
 
-
-
+ 
 
 ---
 
-
+name: diapo-basica
 background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# EJEMPLO
+# Trabajo básico con columnas
+---
+
+template: diapo-basica
+
+Muchas veces las tablas con las que trabajamos contienen más columnas de las que necesitamos,
+por lo que nos interesa hacer una selección de estas.
+
+la función `select` nos ayudará en estas situaciones.
+
+.center[
+&lt;img src="imagenes/select.png" width="300" /&gt;]
 
 ---
+template: diapo-basica
+
+Para el ejemplo cargaremos la tabla `ejemplo_select.xlsx`
+
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:right;"&gt; id &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_3 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_3 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; B &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; C &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; La Serena &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Valparaíso &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Concepción &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; E &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; F &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Navidad &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Quilpué &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Valdivia &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; H &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; I &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Santiago &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; San Bernardo &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Bulnes &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; K &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; L &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Los Ángeles &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Punta Arenas &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Coyhaique &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+---
+template: diapo-basica
+
+¿Qué formas tenemos para seleccionar columnas?
+
+
+
+.panelset[
+.panel[.panel-name[nombres]
+
+Por nombre:
+
+
+```r
+tabla %&gt;% select(id, categoria_1, categoria_2)
+```
+
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:right;"&gt; id &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_2 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; B &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; E &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; H &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; K &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+Seleccionamos columnas `id`, `categoria_1` y `categoria_2`
+
+]
+.panel[.panel-name[posiciones]
+Por posición:
+
+
+```r
+tabla %&gt;% select(1, 2, 4)
+```
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:right;"&gt; id &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_3 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; C &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; F &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; I &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; L &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+En este caso seleccionamos las columnas n°1, 2 y 4, según el orden que tengan de izquierda a derecha
+]
+.panel[.panel-name[rango]
+Por rango:
+
+
+```r
+tabla %&gt;% select(id:categoria_3)
+```
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:right;"&gt; id &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_3 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; B &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; C &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; E &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; F &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; H &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; I &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; K &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; L &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+En este caso seleccionamos desde la columna `id` hasta `categoria_3`, según el orden que tengan de izquierda a derecha
+]
+.panel[.panel-name[seleccion_negativa]
+Selección negativa:
+
+
+```r
+tabla %&gt;% select(-id, -categoria_2)
+```
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; categoria_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_3 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_3 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; C &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; La Serena &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Valparaíso &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Concepción &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; F &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Navidad &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Quilpué &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Valdivia &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; I &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Santiago &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; San Bernardo &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Bulnes &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; L &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Los Ángeles &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Punta Arenas &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Coyhaique &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+Con la selección negativa seleccionamos todas las columnas menos las especificadas. En este caso, seleccionamos todas menos `id` y `categoria_2`.
+]
+]
+---
+template: diapo-basica
+
+## starts_with
+
+Si queremos seleccionar todas las columnas que empiecen con los mismos carácteres, podemos usar
+`starts_with()` dentro del `select()`. Obtengamos la columna id y todas las categorías:
+--
+
+
+```r
+tabla %&gt;% select(id, starts_with('categoria'))
+```
+--
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:right;"&gt; id &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_3 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; B &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; C &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; E &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; F &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; H &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; I &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; K &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; L &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+---
+
+template: diapo-basica
+
+## ends_with
+
+También podríamos querer seleccionar las columnas que terminen con un conjunto de carácteres.
+En este caso usamos `ends_with()` dentro del `select()`. Obtengamos la columna id y todas las columnas
+terminadas en "_1":
+--
+
+
+```r
+tabla %&gt;% select(id, ends_with('_1'))
+```
+--
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:right;"&gt; id &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_1 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; La Serena &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Navidad &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Santiago &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Los Ángeles &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+---
+
+template: diapo-basica
+
+## contains
+
+Por último, podríamos querer seleccionar las columnas que contengan un conjunto de carácteres.
+En este caso usamos `contains()` dentro del `select()`. Todas las columnas que contengan el caracter "_":
+--
+
+
+```r
+tabla %&gt;% select(contains('_'))
+```
+--
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; categoria_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; categoria_3 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_3 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; B &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; C &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; La Serena &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Valparaíso &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Concepción &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; E &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; F &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Navidad &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Quilpué &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Valdivia &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; H &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; I &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Santiago &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; San Bernardo &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Bulnes &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; K &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; L &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Los Ángeles &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Punta Arenas &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Coyhaique &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+
+---
+
+
+template: diapo-basica
+
+## rename
+
+Otra necesidad común es cambiar los nombres de las variables por unos más prácticos. Para esto
+utilizamos la función `rename` que tiene la siguiente sintaxis:
+
+
+```r
+rename(data.frame, nombre_nuevo1 = nombre_viejo1, nombre_nuevo2 = nombre_viejo2, ...)
+```
+--
+Probemos a renombrar las columnas de categorías a `cat_1`, `cat_2`, `cat_3`:
+
+
+```r
+tabla %&gt;% rename(cat_1 = categoria_1, cat_2 = categoria_2, cat_3 = categoria_3)
+```
+--
+
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:right;"&gt; id &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; cat_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; cat_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; cat_3 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_1 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_2 &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; comuna_3 &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; A &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; B &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; C &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; La Serena &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Valparaíso &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Concepción &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; D &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; E &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; F &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Navidad &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Quilpué &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Valdivia &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; G &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; H &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; I &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Santiago &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; San Bernardo &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Bulnes &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:right;"&gt; 4 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; J &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; K &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; L &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Los Ángeles &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Punta Arenas &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Coyhaique &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+
+
+---
+
+
 
 class: center, middle
 
@@ -55,6 +564,10 @@ class: center, middle
 ## Proyecto Ciencia de Datos
 
 ### Mayo 2023
+
+
+
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
