--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>R and databases</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2023-06-13" />
+    <meta name="date" content="2023-06-22" />
     <script src="datos-1-3_files/header-attrs-2.22/header-attrs.js"></script>
     <link href="datos-1-3_files/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="datos-1-3_files/panelset-0.2.6/panelset.js"></script>
@@ -25,7 +25,9 @@ class: center, middle
 
 ## Proyecto Ciencia de Datos
 
-### Mayo 2023
+## Trabajo básico con columnas
+
+### Julio 2023
 
 
 
@@ -563,7 +565,9 @@ class: center, middle
 
 ## Proyecto Ciencia de Datos
 
-### Mayo 2023
+## Trabajo básico con columnas
+
+### Julio 2023
 
 
 
