--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>R and databases</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2023-06-22" />
-    <script src="datos-1-3_files/header-attrs-2.22/header-attrs.js"></script>
+    <meta name="date" content="2023-07-03" />
+    <script src="datos-1-3_files/header-attrs-2.21/header-attrs.js"></script>
     <link href="datos-1-3_files/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="datos-1-3_files/panelset-0.2.6/panelset.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
@@ -59,6 +59,9 @@ template: diapo-basica
 
 Para el ejemplo cargaremos la tabla `ejemplo_select.xlsx`
 
+```r
+tabla = readxl::read_excel('data/ejemplo_select.xlsx')
+```
 
 &lt;table&gt;
  &lt;thead&gt;
